style: ensure about-scyfi class does not appers on small screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -107,3 +107,9 @@ html {
     53% 0
   );
 }
+
+@media screen and (max-width: 900px) {
+  .about-scyfi {
+    -webkit-clip-path: none;
+  }
+}
